fix: centered refAngle label; increased width of modal titles to prevent overflow

--- a/src/components/TargetForms/TargetForms.css
+++ b/src/components/TargetForms/TargetForms.css
@@ -1,5 +1,5 @@
 .angleLabel-wrapper{
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
     margin-left: 5%;
     margin-right: 5%; 
     padding-left: .25rem;
